bug 326712, issues with bookmarks and templates, r+sr=bz